--- a/erkeb/Base.lproj/Main.storyboard
+++ b/erkeb/Base.lproj/Main.storyboard
@@ -100,6 +100,21 @@
                                     <action selector="centerMapBtnWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZGr-0y-EFW"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Czp-ZA-a6k">
+                                <rect key="frame" x="273" y="193" width="70" height="35"/>
+                                <color key="backgroundColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="1du-5G-ftp"/>
+                                    <constraint firstAttribute="height" constant="35" id="fBh-uM-KyH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="12"/>
+                                <state key="normal" title="Annuleer">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelBtnWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Fy-lt-eWr"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lfb-zD-NNc" customClass="RoundedLocationForm" customModule="erkeb" customModuleProvider="target">
                                 <rect key="frame" x="20" y="113" width="335" height="80"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -171,21 +186,6 @@
                                     <constraint firstAttribute="height" constant="61" id="KTv-BC-uQI"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Czp-ZA-a6k">
-                                <rect key="frame" x="273" y="193" width="70" height="35"/>
-                                <color key="backgroundColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="1du-5G-ftp"/>
-                                    <constraint firstAttribute="height" constant="35" id="fBh-uM-KyH"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="12"/>
-                                <state key="normal" title="Annuleer">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="cancelBtnWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Fy-lt-eWr"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -198,7 +198,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gZd-Dh-8RA" secondAttribute="trailing" constant="20" id="a6H-Pv-Uxl"/>
                             <constraint firstItem="r7F-SO-WCZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="bkC-ky-19O"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lfb-zD-NNc" secondAttribute="trailing" constant="20" id="h45-Vy-zy4"/>
-                            <constraint firstItem="Czp-ZA-a6k" firstAttribute="top" secondItem="lfb-zD-NNc" secondAttribute="bottom" id="hSW-7O-icP"/>
+                            <constraint firstItem="Czp-ZA-a6k" firstAttribute="top" secondItem="lfb-zD-NNc" secondAttribute="bottom" constant="-5" id="hSW-7O-icP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r7F-SO-WCZ" secondAttribute="trailing" constant="20" id="i8C-qr-uWm"/>
                             <constraint firstItem="jzL-yB-Tuh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="m8O-z3-WMx"/>
                             <constraint firstItem="lfb-zD-NNc" firstAttribute="top" secondItem="jzL-yB-Tuh" secondAttribute="bottom" constant="25" id="opQ-Vh-DBQ"/>
